--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 matplotlib==2.1.0
 jamo
-tensorflow-gpu==1.15.2
+torch==1.4.0
+torchvision==0.5.0
+tensorboard==1.14.0
 numba==0.48.0
 numpy==1.18.1
 inflect==0.2.5
